<resources>
    <string name="app_name">Pocket Sale</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_eliminar_venta">Are you sure you want to delete this sale?</string>
    <string name="mensaje_venta_exitosa">Successful sale</string>
    <string name="dialog_confirmar_actualizacion_venta">Do you confirm this update?</string>
    <string name="mensaje_venta_eliminacion_exitosa">Sale removed</string>
    <string name="mensaje_actualizacion_exitosa">Updated sale</string>
    <string name="mensaje_numero_venta">"Sale: "</string>
    <string name="mensaje_espera">This might take a few seconds.</string>
    <string name="mensaje_cuenta_creada">Check your email to finish the registration.</string>
    <string name="mensaje_contraseña_corta">Password must be at least 8 characters long.</string>
    <string name="mensaje_contraseña_diferente">The password do not match.</string>
    <string name="mensaje_correo_repetir_contrasenia">Repeat password</string>
    <string name="mensaje_correo_contrasenia">Password</string>
    <string name="mensaje_crear_cuenta">Create Account</string>
    <string name="login_usuario_credenciales_incorrectas">Invalid username / password.</string>
    <string name="login_usuario_cuenta_expirada">Your account is expired.</string>
    <string name="mensaje_email_invalido">Enter a valid email address.</string>
    <string name="boton_olvidaste_contraseña">Forgot your \npassword?</string>
    <string name="boton_crear_cuenta">Create \naccount</string>
    <string name="boton_iniciar_sesion">Login</string>
    <string name="mensaje_correo_electronico">Email</string>
    <string name="mensaje_crear_correo">Enter email</string>
    <string name="venta_total_payment">Payment</string>
    <string name="venta_total_venta">Sale:</string>
    <string name="mensaje_venta_sin_articulos">No items</string>
    <string name="venta_total">"Total: "</string>
    <string name="venta_precio_por_articulo">"E/A: "</string>
    <string name="ventas_inventario_fecha">Date:</string>
    <string name="ventas_inventario_cantidad">"Qty:"</string>
    <string name="fragment_ventas">Sales</string>
    <string name="fragment_inventario">Inventory</string>
    <string name="mensaje_anadir_articulo">NEW ITEM</string>
    <string name="ventas_inventario_buscar_articulo">SEARCH</string>
    <string name="estadistica_articulo_botton_dia">Today</string>
    <string name="estadistica_articulo_botton_semana">Last week</string>
    <string name="estadistica_articulo_botton_mes">This month</string>
    <string name="estadistica_ventas_total_venta">Sales</string>
    <string name="estadistica_inventario_total_articulos">Profit</string>
    <string name="estadistica_inventario_total_costos">Costs</string>
    <string name="estadistica_inventario_leyenda_total">Capital</string>
    <string name="estadistica_inventario_total">Total</string>
    <string name="estadistica_inventario_titulo">Capital</string>
    <string name="surtido_texto_titulo">Enter item</string>
    <string name="surtido_boton_agregar">New Item</string>
    <string name="surtido_confirmar">Confirm</string>
    <string name="surtido_proveedor">Supplier</string>
    <string name="surtido_Registro">Record</string>
    <string name="dialog_fecha_inicial">Select start date</string>
    <string name="dialog_fecha_final">Select end date</string>
    <string name="dialog_numero_text_cantidad">Quantity</string>
    <string name="dialog_texto">Enter text</string>
    <string name="dialog_agregar_familia">Add group</string>
    <string name="dialog_agregar_subfamilia">Add subgroup</string>
    <string name="dialog_cancelar">Cancel</string>
    <string name="dialog_aceptar">Accept</string>
    <string name="editar_articulo_venta">Sale price</string>
    <string name="editar_articulo_proveedor">Cost price</string>
    <string name="editar_articulo_precio">Price</string>
    <string name="editar_articulo_cancelar">Cancel</string>
    <string name="dialog_eliminar_articulo">Are you sure you want to delete this item?</string>
    <string name="mensaje_detalle_articulo">Detail</string>
    <string name="mensaje_nombre_articulo">Name</string>
    <string name="mensaje_subgrupo_articulo">Subgroup</string>
    <string name="mensaje_grupo_articulo">Group</string>
    <string name="mensaje_codigo_articulo">Code</string>
    <string name="mensaje_actualizar_articulo">Update</string>
    <string name="mensaje_agregar_articulo">Add</string>
    <string name="mensaje_costo_articulo">Cost</string>
    <string name="mensaje_cantidad_articulo">Quantity</string>
    <string name="mensaje_editar">Edit</string>
    <string name="imagenAplicacion">App Image</string>
    <string name="ventanaVenta">Sale window</string>
    <string name="imagenArticulosMasVendidos">"Best selling items window "</string>
    <string name="imagenInventarioVentas">Inventory and sales window</string>
    <string name="ventanaGraficas">Window with sales and capital graphs</string>
    <string name="ventanaSurtido">Assortment window</string>
    <string name="terminarSurtido">Finish the assortment</string>
    <string name="agregarArticulo">Call window again article</string>
    <string name="imagenArticulo">Article image</string>
    <string name="capturarCodigoBarras">Button to capture barcode</string>
    <string name="botonEliminar">Delete button</string>
    <string name="botonAgregar">Add button</string>
    <string name="botonCancelar">Cancel button</string>
    <string name="terminarVenta">Finish Sale</string>
    <string name="botonEditar">Edit button</string>
    <string name="botonAceptar">Accept button</string>
    <string name="buscarArticulo">Item search window</string>
    <string name="ocultar_contrasena">Hide password</string>
    <string name="mensaje_venta_no_se_encontro_articulo">No item found</string>
    <string name="mensaje_venta_pago">Payment:</string>
    <string name="mensaje_venta_cambio">Change:</string>
    <string name="suscripcion_mes">Month</string>
    <string name="suscripcion_meses">Months</string>
    <string name="suscripcion_meses_descuento">Save</string>
    <string name="dialog_filtro_cantidad">Stock</string>
    <string name="dialog_filtro_minimo_diminutivo">Min</string>
    <string name="dialog_filtro_maximo_diminutivo">Max</string>
    <string name="dialog_filtro_Nombre">Search by name</string>
    <string name="dialog_filtro_Nombre_diminutivo">Name</string>
    <string name="dialog_filtro_precio">Price</string>
    <string name="dialog_lista_articulos">Items</string>
    <string name="dialog_lista_articulo_no_existe">Item does not exist</string>
    <string name="permisos_denegado">You need permission to access this option.</string>
    <string name="perfil_nombre_empleado">Name</string>
    <string name="perfil_correo_empleado">Email</string>
    <string name="perfil_permisos_leyenda">Permission</string>
    <string name="perfil_permisos_venta">Sales</string>
    <string name="perfil_permisos_modificar_articulos">Modify stock</string>
    <string name="perfil_permisos_crear_articulos">Create items</string>
    <string name="perfil_permisos_estadisticas">See statistics</string>
    <string name="perfil_permisos_proovedoor">Deal with supplier</string>
    <string name="perfil_eliminar_articulo">Are you sure you want to delete this employee?</string>
    <string name="dialog_filtro">Filters</string>
    <string name="dialog_filtro_inventario_optimo">Low on stock</string>
    <string name="editar_articulo_inventario_optimo">Optimal stock</string>
    <string name="dialog_foto_titulo">Capture method</string>
    <string name="mensaje_error_intentear_mas_tarde">An error occurred, please try again</string>
    <string name="mensaje_error_sesion_expirada">Session expired, log in again</string>
    <string name="numero_idioma">0</string>
    <string name="mensaje_error_suscripcion">An error occurred, please contant PocketSale.</string>
    <string name="suscripcion_titulo">Subscription</string>
    <string name="suscripcion_titulo_valido">Subscription valid until</string>
    <string name="mes_enero">January</string>
    <string name="mes_febrero">February</string>
    <string name="mes_marzo">March</string>
    <string name="mes_abril">April</string>
    <string name="mes_mayo">May</string>
    <string name="mes_junio">June</string>
    <string name="mes_julio">July</string>
    <string name="mes_agosto">August</string>
    <string name="mes_septiempre">September</string>
    <string name="mes_octubre">October</string>
    <string name="mes_noviembre">November</string>
    <string name="mes_diciembre">December</string>
    <string name="mensaje_error_familia_existe">Group name already exists.</string>
    <string name="mensaje_error_subfamilia_existe">Subgroup name already exists</string>
    <string name="dialog_contrasena_titulo">Change password</string>
    <string name="dialog_contrasena_password">Password</string>
    <string name="dialog_contrasena_password_new">New password</string>
    <string name="mensaje_contrasena_cambiar">Updated password.</string>
    <string name="mensaje_error_contrasena">Wrong password</string>
    <string name="mensaje_cuenta_ya_registrado">The user is already registered.</string>
    <string name="mensaje_cuenta_registro_pendiente">This email already has a pending registration.</string>
    <string name="mensaje_dialog_recuperar_contrasena">Please check your email for a message with your password.</string>
    <string name="mensaje_usuario_invalido">Invalid user.</string>
    <string name="empleados_titulo">Employees</string>
    <string name="perfil_permisos_modificar_venta">Modify sale</string>
    <string name="perfil_permisos_modificar_proovedor">Manage supply</string>
    <string name="mensaje_inventario_detalle_codigo">Items needs a code.</string>
    <string name="mensaje_inventario_detalle_nombre">Items needs a name.</string>
    <string name="mensaje_inventario_detalle_precio">Items needs a price.</string>
    <string name="mensaje_inventario_detalle_costo">Items needs a cost.</string>
    <string name="mensaje_inventario_detalle_cantidad">Items needs a quantity.</string>
    <string name="mensaje_inventario_detalle_grupo">Items needs a group.</string>
    <string name="mensaje_inventario_detalle_subgrupo">Items needs a subgroup.</string>
    <string name="mensaje_inventario_detalle_optimo">Items needs an optimal Stock.</string>
    <string name="mensaje_empleado_detalle_correo">Employees needs a valid email.</string>
    <string name="mensaje_empleado_detalle_nombre">Employees needs a name.</string>
    <string name="tienda_detalle_tienda">Store</string>
    <string name="mensaje_iniciar_sesion">Your subscription was successfully updated, please log in again to access PocketSale</string>
    <string name="mensaje_token_erroneo">An error occurred while completing your purchase, please try again.</string>
    <string name="inventario_detalle_modificar_inventario">Modify stock.</string>
    <string name="loss_title">Losses</string>
    <string name="loss_details_update_successful">Losses updated.</string>
    <string name="supply_details_update_successful">Supply updated</string>
    <string name="loss_details_delete_successful">Losses removed.</string>
    <string name="supply_details_delete_successful">Supply removed.</string>
    <string name="perfil_permisos_perdidas">Make losses</string>
    <string name="perfil_permisos_modificar_perdidas">Manage losses</string>
    <string name="surtido_detalle_titulo">Supply</string>
    <string name="loss_details_title">Loss</string>
    <string name="suscripcion_actualizacion">Your subscription has been updated.</string>
    <string name="articulos_no_vendidos_titulo">Items with more time without being sold</string>
    <string name="estadistica_articulos_titulo">Best selling items</string>
    <string name="empleado_titulo">Employee</string>
</resources>