<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/transparent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:minWidth="800dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_button_bluelight">

        <TextView
            android:id="@+id/dialogAgregarArticuloTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="@font/open_sans"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/dialogAgregarArticuloCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_margin="15dp"
            android:hint="@string/mensaje_codigo_articulo"
            android:inputType="number"
            android:textColor="@color/black"
            android:fontFamily="@font/open_sans"
            android:textSize="18sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:background="@drawable/round_button_white"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/dialogAgregarArticuloCantidad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:hint="@string/mensaje_cantidad_articulo"
                android:inputType="number"
                android:textColor="@color/black"
                android:fontFamily="@font/open_sans"
                android:textSize="18sp"
                android:textAlignment="center"
                android:background="@drawable/round_button_white"
                android:gravity="center_horizontal"
                android:importantForAutofill="no" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">

            <androidx.cardview.widget.CardView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                card_view:cardCornerRadius="64dp">

            <ImageButton
                android:id="@+id/dialogAgregarArticuloBuscarArticulo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/magnifyingglassicon"
                android:scaleType="centerCrop"
                android:background="@color/light_blue"
                android:layout_gravity="center"
                android:contentDescription="@string/buscarArticulo" />

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.cardview.widget.CardView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardCornerRadius="64dp">

            <ImageButton
                android:id="@+id/dialogAgregarArticuloObtenerCodigo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/barcodeicon"
                android:scaleType="centerCrop"
                android:background="@color/light_blue"
                android:layout_gravity="center"
                android:contentDescription="@string/capturarCodigoBarras"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">

            <Button
                android:id="@+id/dialogAgregarArticuloCancelar"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/open_sans"
                android:background="@drawable/round_button_white"
                android:text="@string/dialog_cancelar"
                android:contentDescription="@string/botonCancelar"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/dialogAgregarArticuloAceptar"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/open_sans"
                android:background="@drawable/round_button_white"
                android:text="@string/dialog_aceptar"
                android:contentDescription="@string/botonAceptar"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>